fix tab label overflow

--- a/frontend/src/components/tab-list/TabList.module.scss
+++ b/frontend/src/components/tab-list/TabList.module.scss
@@ -17,6 +17,7 @@
       font-weight: bold;
       color: $color-grey;
       margin: 0 $spacing-l;
+      overflow: hidden;
     }
     .tabButton {
       flex: 1;
