--- a/frontend/src/pages/interactions/components/interaction-label/InteractionLabel.module.scss
+++ b/frontend/src/pages/interactions/components/interaction-label/InteractionLabel.module.scss
@@ -12,5 +12,7 @@
   }
   .label {
     white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 }
